@@ -710,8 +710,8 @@ compiling your program with later versions of OCaml when they add new
 warnings or modify existing warnings.
 
 The default setting is
-.B \-warn\-error \-a+31
-(only warning 31 is fatal).
+.B \-warn\-error \-a
+(no warning is fatal).
 .TP
 .B \-warn\-help
 Show the description of all available warning numbers.
